# pc-tycoon

./: .gitignore  Cargo.toml  README.md  compile_shaders.bat  imgui.ini  todo.txt
parts/case/: Test 1.json  Test Case.json
parts/cases/: Test Case.json
parts/cpu/: Test CPU.json  Test Ryzen.json
parts/cpu coolers/: Test Cooler.json
parts/cpu_cooler/: Test Cooler.json
parts/cpus/: Test CPU.json
parts/fan/: Test fan.json
parts/fans/: Test Fan.json
parts/gpu/: Test GPU.json  Test GTX.json
parts/gpus/: Test GPU.json
parts/motherboard/: Test A100.json  Test MB.json
parts/motherboards/: Test MB.json
parts/power supplies/: Test PSU.json
parts/power_supply/: Test PSU.json  Test Power Supply.json
parts/ram/: Test RAM 8gb.json  Test RAM.json
parts/rams/: Test RAM.json
parts/storage/: Test M.2.json  Test Storage.json
parts/storages/: Test Storage.json
saves/: default.save  save1.json  save1.save
shaders/: color.frag  color.vert  default.frag  default.frag.spv  default.vert  default.vert.spv  image.frag  image.vert
src/: bindings.rs  components_list.rs  drawable.rs  log.rs  main.rs  part_loader.rs  ptrcell.rs  rect.rs  timer.rs
src/game/: build_pc.rs  buildpc.rs  ingame.rs  inventory.rs  main_menu.rs  mainmenu.rs  market.rs  mod.rs  pc.rs  pc_components.rs  pcbuilder.rs  player_inventory.rs  profile.rs  save.rs  select_save.rs  selectsave.rs
src/gfx/: color_rect.rs  image_rect.rs  mod.rs  rect.rs  text.rs  texture.rs  vectors.rs  vertexs.rs
src/log/: mod.rs
src/math/: vec2.rs  vec3.rs  vec4.rs
src/primitives/: mod.rs  rect.rs  text.rs  (+1 more)
(+29 files in other folders)
