[package]
name = "pc_tycoon"
version = "0.1.0"
edition = "2021"
default-run = "pc_tycoon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crypt = { version = "3.1.12", package = "magic-crypt" }
delegate = "0.9.0"
glium = "0.32.1"
image = "0.24.4"
rand = "0.8.5"
rusttype = "0.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.87"
