[package]
name = "pc_tycoon"
version = "0.1.0"
edition = "2021"
default-run = "pc_tycoon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.23"
ash = "0.37.3"
glfw = { version = "0.54.0", features = ["ash", "vulkan"] }
glm = { version = "0.18.0", package = "nalgebra-glm" }
gpu-allocator = "0.24.0"
image = "0.24.7"
paste = "1.0.14"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
winapi = "0.3.9"
